# s2

./: .gitignore  COPYING  Makefile.am  configure.ac  connect.sh.example
data/themes/: chat_basic.edc  chat_basic.mk  list_basic.edc  list_basic.mk
src/modules/: Makefile.mk  chat_basic.c  dbus_conn.c  dbus_conn.xml  dummy_login.c  list_basic.c
